# samzong.github.io

./: .gitignore  .jekyll-metadata  404.html  Makefile  README.md  _config.yml  about.md  atom.xml  cannot-upgrade-file.md  docusaurus.config.js  feed.json  friends.md  index.html  index.md  package-lock.json  package.json  params.json  pyproject.toml  rss.xml  sitemap.xml  sw.js
.husky/: pre-commit
.obsidian/: app.json  workspace.json
.vitepress/: config.mts
_data/: friends.yml
_drafts/: sample.md
_posts/: 2012-07-30-爱与痛的边缘.md  2014-03-27-我是一个最不会写标题的人.md  2014-07-22-CentOS7_Configure_BIND_DNS_Server.md  2014-09-22-Howto-use-ssr-on-mac.md  2015-02-23-写的第一个前端页面.md  2015-04-03-路途上.md  2015-04-12-这是一道鬼门关.md  2015-06-04-民谣是生.md  2015-07-18-无题.md  2015-08-12-HowTo-Automatic-EasyBackup-MysqlDB.md  2015-11-17-极简主义.md  2016-01-15-如何做一个成熟的自己.md  2016-01-22-Install_mariadb10_centos7.md  2016-02-12-HowTo-use-TortoiseGit-for-Windows.md  2016-03-07-龙族路明非.md  2016-03-18-理解-Linux-的硬链接与软链接.md  2016-03-19-CentOS-6-2-初始安装基本优化操作.md  2016-03-22-MySQL-2-开启慢日志优化.md  2016-03-23-Linux-笔试试题.md  2016-03-24-MySQL-6-利用Linux计划任务定时同步MySQL.md  2016-03-24-在CentOS中配置-SFTP-环境.md  2016-03-27-HowTo-Install-MongoDB-on-CentOS-6-x.md  2016-03-29-CentOS-6-1-使用createrepo搭建本地源.md  2016-03-29-Linux-中的三个特殊权限.md  2016-03-29-MySQL-4-MySQL数据库基础.md  2016-04-01-如何在CentOS-6-安装更高版本的PHP.md  2016-04-08-Mac-2-解决oh-my-zsh在终端下打开缓慢.md  2016-04-09-Mac-1-调整Launchpad图标大小.md  2016-04-20-使用SoureceTree管理你的git项目.md  2016-04-27-HowTo-Add-Piwik-Tracking-to-Ghost.md  2016-04-27-HowTo-Install-piwik-with-nginx-on-centos-6-x.md  (+226 more)
(+1790 files in other folders)
