[tool.poetry]
name = "samzong-me"
version = "0.1.0"
description = ""
authors = ["samzong.lu <samzong.lu@gmail.com>"]
readme = "README.md"
packages = [{include = "samzong"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

